test_case/rust-lang_rust/88680_915209754.rs
rust
macro_rules! m { () => () }

#[path] // error: malformed `path` attribute input
m!();

fn main() {}
